Closed Bug 1183893 Opened 9 years ago Closed 9 years ago

2,000 instances of "NS_ENSURE_TRUE(newRoot) failed" emitted from dom/base/nsRange.cpp during linux64 debug testing

Categories

(Core :: DOM: Core & HTML, defect)

41 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: erahm, Assigned: erahm)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1183891 +++

This looks pretty similar to bug 1183891 though with slightly different counts.

> 2038 [NNNNN] WARNING: NS_ENSURE_TRUE(newRoot) failed: file dom/base/nsRange.cpp, line 1231

This warning [1] shows up in the following test suites:

> mozilla-central_ubuntu64_vm-debug_test-mochitest-e10s-2-bm53-tests1-linux64-build12.txt:2051
> mozilla-central_ubuntu64_vm-debug_test-mochitest-2-bm67-tests1-linux64-build1.txt:2051

It shows up in 8 tests. A few of the most prevalent:

> 1554 - dom/imptests/html/dom/ranges/test_Range-set.html
> 1554 - dom/imptests/html/dom/ranges/test_Range-set.html
> 261 - dom/imptests/editing/selecttest/test_extend.html
> 261 - dom/imptests/editing/selecttest/test_extend.html
> 177 - dom/imptests/editing/selecttest/test_collapse.html
> 177 - dom/imptests/editing/selecttest/test_collapse.html
> 59 - dom/imptests/editing/selecttest/test_selectAllChildren.html
> 59 - dom/imptests/editing/selecttest/test_selectAllChildren.html

[1] https://hg.mozilla.org/mozilla-central/annotate/e786406bc683/dom/base/nsRange.cpp#l1231
Proper numbers:

> 777 - dom/imptests/html/dom/ranges/test_Range-set.html
> 777 - dom/imptests/html/dom/ranges/test_Range-set.html
> 177 - dom/imptests/editing/selecttest/test_collapse.html
> 177 - dom/imptests/editing/selecttest/test_collapse.html
> 59 - dom/imptests/editing/selecttest/test_selectAllChildren.html
> 59 - dom/imptests/editing/selecttest/test_selectAllChildren.html
> 6 - dom/imptests/editing/selecttest/test_extend.html
> 6 - dom/imptests/editing/selecttest/test_extend.html

Similar to bug 1183891 these tests appear to be intentionally causing the warning (and handling the resulting exception).
Olli, would you mind reviewing this or redirecting to a more appropriate reviewer?
Attachment #8633818 - Flags: review?(bugs)
Assignee: nobody → erahm
Status: NEW → ASSIGNED
Attachment #8633818 - Flags: review?(bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/3d389e79aef6
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: