Bug 1183893 - Remove warning if invalid node type is passed to nsRange::SetEnd. r=smaug